Fix code in dark mode

--- a/.storybook/preview.css
+++ b/.storybook/preview.css
@@ -75,6 +75,11 @@
   border-bottom: 1px solid var(--color-borders) !important;
 }
 
+.dark .sbdocs-content code {
+  background-color: #fff1 !important;
+  border: 1px solid #fff2 !important;
+}
+
 .dark .sbdocs-content .docblock-source {
   background-color: var(--color-borders);
 }
